# sam-local-tools

./: .gitignore  README.md  delete.sh  docker-compose.yml  init.sh  pyproject.toml  tasks.py
app/: README.md  env.json  template.yaml
app/functions/get_data/: app.py
app/functions/put_data/: app.py  requirements.txt  result.json
serverless-app/: README.md  template.yaml
