[tool.poetry]
name = "sam-local-tools"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.20.53"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
aws-sam-cli = "^1.37.0"
awscli = "^1.22.54"
invoke = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
